package Comunidades;

import Incidentes.Incidente;
import Servicios.Servicio;

import java.util.List;

public class Comunidad {
  List<Miembro> miembros;
  List<Servicio> serviciosDeInteres;
  List <Usuario> administradores;
  List <Incidente> incidentes;

}
