package Comunidades;

public enum TipoUsuario {

  DE_SERVICIO,
  OBSERVADOR
}
