package Modelo.Incidentes;

public enum EstadoIncidentes {
    ABIERTO,
    CERRADO
}
