package Modelo.Localizaciones;

public enum TipoLocalizacion {
  PROVINCIA,
  MUNICIPIO,
  DEPARTAMENTO
}
